# Forma--o-Python-Backend-Developer

Explorando Banco de Dados Relacionais com Python DB API/: main.py  pyproject.toml
Explorando Banco de Dados Relacionais com Python DB API/models/: client.py
