[tool.poetry]
name = "02"
version = "0.1.0"
description = ""
authors = ["eymardneto <eymard.neto@intmed.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
